# xrplorer

./: CMakeLists.txt  LICENSE  conanfile.py  cupcake.json
include/xrplorer/: OperatingSystem.hpp  Shell.hpp  bases.hpp  context.hpp  database.hpp  directory.hpp  filesystem.hpp  nodes-directory.hpp  object-directory.hpp  operating-system.hpp  root-directory.hpp  shell.hpp  tlpush.hpp  xrplorer.hpp
src/: xrplorer.cpp
src/libxrplorer/: OperatingSystem.cpp  Shell.cpp  context.cpp  database.cpp  filesystem.cpp  nodes-directory.cpp  object-directory.cpp  operating-system.cpp  path-command.cpp  path-command.hpp  root-directory.cpp  shell.cpp
tests/: xrplorer.cpp
